--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,52 @@ header nav ul li:hover {
   color: var(--Soft-orange);
   cursor: pointer;
 }
+.menu-icon {
+  display: none;
+}
 
 @media (max-width: 768px) {
   header nav ul {
     display: none;
+  }
+  .menu-icon {
+    margin: 20px 0;
+    width: 25px;
+    height: 14px;
+    cursor: pointer;
+    position: relative;
+    display: block;
+  }
+  .menu-icon span {
+    background-color: black;
+    height: 2px;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    transition: all 0.3s ease;
+  }
+  .menu-icon span:first-child {
+    top: 0;
+  }
+  .menu-icon span:nth-child(2) {
+    top: 6px;
+  }
+  .menu-icon span:last-child {
+    top: 12px;
+  }
+  .menu-icon:hover span:nth-child(2) {
+    opacity: 0;
+  }
+  .menu-icon:hover span:first-child,
+  .menu-icon:hover span:last-child {
+    top: 6px;
+    background-color: red;
+  }
+  .menu-icon:hover span:first-child {
+    transform: rotate(45deg);
+  }
+  .menu-icon:hover span:last-child {
+    transform: rotate(-45deg);
   }
 }
 
@@ -112,6 +154,8 @@ header nav ul li:hover {
 
 .landing .container .big-col .text {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .landing .container .big-col h1 {
@@ -139,7 +183,7 @@ header nav ul li:hover {
   cursor: pointer;
   border-radius: 2px;
 }
-.text-w{
+.text-w {
   margin-top: 30px;
 }
 .landing .container .big-col button:hover {
