--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,8 @@ ul {
 header nav {
   display: flex;
   justify-content: space-between;
-  margin-top: 15px;
+  margin-top: 20px;
+  width: 100%;
 }
 
 header nav ul {
@@ -87,8 +88,32 @@ header nav ul li:hover {
   color: var(--Soft-orange);
   cursor: pointer;
 }
-.menu-icon {
+.mobile-menu {
   display: none;
+}
+.mobile-nav {
+  display: none;
+}
+.overlay {
+  display: none;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  height: 100vh;
+  top: 0;
+  transition: 0.5s ease;
+}
+.mobile-nav {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: white;
+  right: 0;
+  top: 0;
+  /* display: none; */
+  padding: 20px;
+  width: 200px;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
@@ -100,48 +125,47 @@ header nav ul li:hover {
   header nav ul {
     display: none;
   }
-  .menu-icon {
-    margin: 20px 0;
-    width: 25px;
-    height: 14px;
+  .mobile-menu {
+    margin: 10px;
+    width: 40px;
+    height: 25px;
     cursor: pointer;
     position: relative;
     display: block;
   }
 
-  .menu-icon:hover+ul {
-    
+  .show {
+    display: flex;
   }
-  .menu-icon span {
-    background-color: black;
-    height: 2px;
-    position: absolute;
+  .nav-content {
+    margin-top: 30px;
+    margin-left: -20px;
+  }
+  .nav-content > * {
+    padding: 10px;
+  }
+  .nav-content li {
+    list-style: none;
+    text-transform: uppercase;
+  }
+  .nav-content li a {
+    text-decoration: none;
+    color: var(--Very-dark-blue);
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .nav-content li a:hover {
+    background-color: darkgray;
+    padding: 12px;
     width: 100%;
-    left: 0;
-    transition: all 0.3s ease;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0px 3px 13px rgba(0, 0, 0, 0.2);
+    transition: 0.5s ease-in-out;
   }
-  .menu-icon span:first-child {
-    top: 0;
-  }
-  .menu-icon span:nth-child(2) {
-    top: 6px;
-  }
-  .menu-icon span:last-child {
-    top: 12px;
-  }
-  .menu-icon:hover span:nth-child(2) {
-    opacity: 0;
-  }
-  .menu-icon:hover span:first-child,
-  .menu-icon:hover span:last-child {
-    top: 6px;
-    background-color: red;
-  }
-  .menu-icon:hover span:first-child {
-    transform: rotate(45deg);
-  }
-  .menu-icon:hover span:last-child {
-    transform: rotate(-45deg);
+  .mobile-nav img {
+    float: right;
   }
 }
 
@@ -205,10 +229,17 @@ header nav ul li:hover {
   background-color: var(--Very-dark-blue);
 }
 
+.landing .container .big-col h1 {
+  font-size: 50px;
+  font-weight: 800;
+  width: 300px;
+  margin-left: 30px;
+}
+
 .landing .container .tranding {
   grid-area: right;
   background-color: var(--Very-dark-blue);
-  padding: 25px;
+  padding: 43px 20px;
 }
 .landing .container .tranding hr {
   margin-bottom: 20px;
@@ -251,7 +282,7 @@ header nav ul li:hover {
   .landing-img-2 {
     display: block;
     margin: 0 auto;
-    height: 290px;
+    width: 100%;
   }
   .landing .container .big-col p {
     width: auto;
