--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ header nav ul li:hover {
   padding: 20px;
   width: 200px;
   height: 100%;
+  transition: ease 2s;
 }
 
 @media (max-width: 768px) {
