--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,9 @@ header nav ul li:hover {
     cursor: pointer;
     position: relative;
     display: block;
+  }  
+  .m-nav:hover + .overlay {
+    display: inline;
   }
 
   .show {
